--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ button{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .card1 {
-    width: 300px;
+    width: 260px;
     background-color: bisque;
     border-radius: 8px;
     padding: 20px;
@@ -90,9 +90,8 @@ button{
     text-align: right;
 }
 #previous-patients-list{
-    display:grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
+    display: flex;
+    flex-wrap: wrap;
 }
 #today-total h2{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
