--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 #main-form {
     text-align: center;
     margin: 10%;
+    margin-bottom: 2%;
+    margin-top: 2%;
     padding: 4%;
+    padding-top: 2%;
+    padding-bottom: 2%;
     background-color: bisque;
     border-radius: 10px;
     border: 2px solid black;
